2021-01-01  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* probopt.tcl: New package defining a number of probabilistic optimisation algorithms
	* probopt_*.tcl: Individual source files for these algorithms
	* probopt.test: Tests for the probabilistic algorithms
	* probopt.man: Description of the algorithms (including references describing the backgrounds)
	* filtergen.tcl: Correct a small mistake (loop over data)
	* filtergen.test: Correct tests (several small mistakes)

2020-12-20  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* filtergen.tcl: New package for digital filtering
	* filtergen.man: Description of the filters package
	* filtergen.test: Simple tests for the filters package
	* pkgIndex.tcl: Added the filters package

2020-11-22  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* geometry.tcl: Source the file geometry_ext.tcl - additional procedures by Manfred Rosenberger
	* geometry_ext.tcl: File with the additional procedures
	* geometry.test: Added tests for these procedures
	* math_geometry.man: Description of these procedures
	* pkgIndex.tcl: Bumped version to 1.4.1

2020-09-20  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* geometry.tcl: The procedures [direction] and [octant] used an inconsistent definition of the direction (see https://core.tcl-lang.org/tcllib/tktview?name=fb4812f82b).
	                The changes make the results consistent with the standard mathematical definition.
	                Further change: return the common point for adjacent line segments.
	* geometry.test: Added several tests wrt the above changes
	* pkgIndex.tcl: Bumped the version of geometry to 1.4.0, as the changes above represent a minor incompatibility.
	* geometry.man: Document these changes

2020-04-17  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* primes.tcl: Correct the implementation of the totient function, as per https://core.tcl-lang.org/tcllib/tktview?name=7017dad214