@@ -37,3 +37,4 @@ package ifneeded math::exact             1.0.1 [list source [file join $dir exac
 package ifneeded math::PCA               1.0   [list source [file join $dir pca.tcl]]
 package ifneeded math::filters           0.1   [list source [file join $dir filtergen.tcl]]
 package ifneeded math::probopt           1.0   [list source [file join $dir probopt.tcl]]
+package ifneeded math::changepoint       0.1   [list source [file join $dir changepoint.tcl]]
